--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-cayman
-title: 'UC Davis Bioinformatics Core March 2019 RNA-Seq Workshop @ UCSF '
+title: 'UC Davis Bioinformatics Core August 2019 RNA-Seq Workshop @ UCD '
 tagline: 'June 18th-22nd, 2018'
-name: 'UC Davis Bioinformatics Core March 2019 RNA-Seq Workshop @ UCSF '
+name: 'UC Davis Bioinformatics Core August 2019 RNA-Seq Workshop @ UCD '
 github:
-  repository_url: https://ucdavis-bioinformatics-training.github.io/2019_March_UCSF_mRNAseq_Workshop
+  repository_url: https://ucdavis-bioinformatics-training.github.io/2019_August_UCD_mRNAseq_Workshop
