--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,61 @@
-theme: jekyll-theme-cayman
-title: 'UC Davis Bioinformatics Core August 2019 RNA-Seq Workshop @ UCD '
-tagline: 'June 18th-22nd, 2018'
-name: 'UC Davis Bioinformatics Core August 2019 RNA-Seq Workshop @ UCD '
-github:
-  repository_url: https://ucdavis-bioinformatics-training.github.io/2019_August_UCD_mRNAseq_Workshop
+theme: jekyll-theme-minimal
+title: 'UC Davis Bioinformatics Core August 2019 RNA-Seq Workshop @ UCD'
+show_downloads: True
+google_analytics: True
+navigation:
+  - heading: Introduction
+  - title: Intro to the Workshop and Core
+    url: /
+  - title: What is Bioinformatics?
+    url: pdfs/Genomics_a_perspective_March2019.pdf
+  - heading: Command-Line and the Cluster
+  - title: Logging in and Transferring Files
+    url: cli/logging-in
+  - title: Intro to Command-Line
+    url: cli/command-line-intro
+  - title: Advanced Command-Line
+    url: cli/advanced-command-line
+  - title: Running jobs on the Cluster and using modules
+    url: cli/cluster
+  - title: Experimental Design and Cost Estimation
+    url: pdfs/ExperimentalDesign.pdf
+  - heading: Data Reduction
+  - title: Files and Filetypes for RNA-Seq
+    url: data_reduction/filetypes
+  - title: Project Setup
+    url: data_reduction/project_setup
+  - title: Preprocessing Data
+    url: data_reduction/preproc_htstream
+  - title: Aligners
+    url: data_reduction/alignment
+  - title: Generating Summarized Counts
+    url: data_reduction/counts
+  - heading: Intro to R and Rstudio
+  - title: Getting Started
+    url: intro2R/RStudio
+  - title: Intro to R
+    url: intro2R/Intro2R
+  - title: Prepare Data in R (extra)
+    url: intro2R/data_in_R_prepare
+  - title: Data in R (extra)
+    url: intro2R/orig_data_in_R
+  - heading: Differential Expression and Pathway Analysis
+  - title: Prepare Differential Expression Analysis
+    url: differential_expression/de_analysis_prepare
+  - title: Get Gene Annotation
+    url: differential_expression/annotation
+  - title: Differential Expression Analysis
+    url: differential_expression/orig_DE_Analysis
+  - title: Pathway Analysis
+    url: differential_expression/enrichment
+  - heading: ETC
+  - title: Closing thoughts
+    url: closing
+  - title: Cheat Sheets
+    url: cheatSheetIndex
+  - title: Github
+    url: https://github.com/ucdavis-bioinformatics-training/2019_August_UCD_mRNAseq_Workshop_test2
+
+
+
+
