--- a/_config.yml
+++ b/_config.yml
@@ -57,3 +57,5 @@ navigation:
     url: cheatSheetIndex
   - title: Github
     url: https://github.com/ucdavis-bioinformatics-training/2019_August_UCD_mRNAseq_Workshop
+  - title: Biocore website
+    url: http://bioinformatics.ucdavis.edu
