--- a/_config.yml
+++ b/_config.yml
@@ -41,19 +41,21 @@ navigation:
     url: data_reduction/preproc_htstream
   - title: Aligners
     url: data_reduction/alignment
-  - title: Salmon
-    url: data_reduction/salmon
   - title: Generating Summarized Counts
     url: data_reduction/counts
+  - title: Salmon
+    url: data_reduction/salmon
   - heading: Differential Expression and Pathway Analysis
   - title: Prepare Differential Expression Analysis
     url: differential_expression/de_analysis_prepare
   - title: Get Gene Annotation
     url: differential_expression/annotation
   - title: Differential Expression Analysis
-    url: differential_expression/orig_DE_Analysis
+    url: differential_expression/DE_Analysis
   - title: Pathway Analysis
     url: differential_expression/enrichment
+  - title: Comparison between STAR and Salmon
+    url: differential_expression/compare_star_salmon
   - heading: ETC
   - title: Closing thoughts
     url: closing
