--- a/_config.yml
+++ b/_config.yml
@@ -65,3 +65,5 @@ navigation:
     url: https://github.com/ucdavis-bioinformatics-training/2019_August_UCD_mRNAseq_Workshop
   - title: Biocore website
     url: http://bioinformatics.ucdavis.edu
+  - title: Workshop Photos
+    url: photos/photos
